--- a/client/vue_news/index.html
+++ b/client/vue_news/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>vue news</title>
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?f3282cdbf1813c33c587e3807387d09b";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+
   </head>
   <body>
   	<div class="container-fluid" style="height: 100%">
